# fusic

./: CHANGELOG  CMakeLists.txt  README  changelog - 0.8.1.rtf  initial_db.sql
lib/: mysqlpp.lib  mysqlpp_d.lib
sql/: postStructureInstall.sql  proc_logFile.sql  structure.sql
src/: CMakeLists.txt  Fusic.sln  fusic.cpp  fusic.h  main.cpp  res.qrc  settings.py.example
src/Fusic/: AutoDJ.cpp  AutoDJ.h  BackgroundController.cpp  BackgroundController.h  CallbackButton.cpp  CallbackButton.h  CartsButton.cpp  CartsButton.h  ColourButton.cpp  ColourButton.h  ColourComboBox.cpp  ColourComboBox.h  ColourListBox.cpp  ColourListBox.h  ColourStatic.cpp  ColourStatic.h  ColourStaticTimer.cpp  ColourStaticTimer.h  Fusic.aps  Fusic.clw  Fusic.cpp  Fusic.dsp  Fusic.dsw  Fusic.h  Fusic.ncb  Fusic.opt  Fusic.plg  Fusic.rc  Fusic.vcproj  FusicCartsDlg.cpp  FusicCartsDlg.h  FusicDlg.cpp  FusicDlg.h  FusicLoginDlg.cpp  FusicLoginDlg.h  FusicMainDlg.cpp  FusicMainDlg.h  FusicMainModel.cpp  FusicMainModel.h  FusicProgress.cpp  (+35 more)
src/Fusic Setup/: Fusic Setup.vdproj
src/Fusic/res/: Fusic.rc2  Thumbs.db
src/auth/: CMakeLists.txt  authbase.cpp  authbase.h  authfactory.cpp  authfactory.h  authldap.cpp  authldap.h  authldapdialog.cpp  authldapdialog.h  authldapdialog.ui  authsql.cpp  authsql.h  ldapaccessgrouppicker.cpp  ldapaccessgrouppicker.h  ldapaccessgrouppicker.ui
src/cmake-modules/: FindOpenLDAP.cmake
src/hardware/: soundDevice.py
src/misc/: CMakeLists.txt  fusicsettings.cpp  fusicsettings.h
src/sounds/: CMakeLists.txt  cart.cpp  cart.h  cart.py  news.py  song.cpp  song.h  song.py  sound.cpp  sound.h  sound.py  sweeper.py
src/sounds/tests/: CMakeLists.txt  soundtest.cpp  soundtest.h
src/ui/: CMakeLists.txt  cartwall.cpp  cartwall.h  cartwall.ui
src/wizards/: CMakeLists.txt  databasechooser.cpp  databasechooser.h  initialwizard.cpp  initialwizard.h  initialwizard_authsetup.cpp  initialwizard_authsetup.h  initialwizard_authsetup.ui  initialwizard_introduction.cpp  initialwizard_introduction.h  initialwizard_mysqlsetup.cpp  initialwizard_mysqlsetup.h  initialwizard_mysqlsetup.ui
